--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^6.1.0
   equatable: ^2.0.5
   dartz: ^0.10.1
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
